<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:gravity="center" >
        <requestFocus android:layout_width="wrap_content" />
    </TextView>


    <EditText
        android:id="@+id/expression_Text"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:background="@null"
        android:ems="10"
        android:gravity="right|bottom"
        android:textColor="#757575"
        android:textSize="24sp">

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <EditText
        android:id="@+id/et_Text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:gravity="right|bottom"
        android:background="@null"
        android:textSize="35sp">

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ce"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/ce"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btn_times"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/times"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btn_c"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/c"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/num7"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/num8"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/num9"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/num4"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/num5"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/num6"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/num1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/num2"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/num3"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/btn_extract"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:padding="20dp"
            android:src="@drawable/evolution"
            android:textSize="20sp"
            tools:src="@drawable/evolution" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:text="@string/num0"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_point"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/point"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textSize="36sp" />
    </LinearLayout>



</LinearLayout>